--- a/AutoPartsShop/Properties/launchSettings.json
+++ b/AutoPartsShop/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "PartNames",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
