--- a/AutoPartsShop/appsettings.json
+++ b/AutoPartsShop/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ecommerce-app-db-neww;Integrated Security=True;Pooling=False"
+    "DefaultConnectionString": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NOVVVV;Integrated Security=True;Pooling=False"
   },
   "AllowedHosts": "*"
 }
